<resources>
    <string name="app_name">Herririk-Herri</string>
    <string name="user">Erabiltzaile</string>
    <string name="no_micro">Ez daukazu microfoia</string>
    <string name="no_app">Ez daukazu app hau egiteko</string>

    <!--URl peticiones REST-->
    <string name="url_server">http://u017633.ehu.eus:28080/Herririk_herri_Serv/rest/Herririk-Herri</string>


    <!--Botones comunes-->
    <string name="button_inicio">Aurrera</string>
    <string name="button_back">Aurreko</string>
    <string name="button_next">Hurrengo</string>
    <string name="button_startRecord">Hasi grabazioa</string>
    <string name="button_correct">Zuzendu</string>
    <string name="button_play">Entzun</string>
    <string name="button_correct_sol">Entzun emaitza</string>

    <!--Toasts-->
    <string name="toast_fail">Erantzuna ez da zuzena!</string>
    <string name="toast_success">Zuzena!</string>

    <!--Activity main, registro y Login-->
    <string name="login_username">Erabiltzaile</string>
    <string name="login_pass">Pasahitza</string>
    <string name="login_pass_conf">Pasahitza Berdina</string>
    <string name="register_name">Izena</string>
    <string name="register_lastname">Abizena</string>
    <string name="login">LOGIN</string>
    <string name="register">ERREGISTRATU</string>

    <!--Activity MenuHerria,-->
    <string name="menu_title">Aukeratu Herria</string>
    <string name="menu_bermeo">Bermeo</string>
    <string name="menu_gernika">Gernika</string>
    <string name="menu_Lekeitio">Lekeitio</string>
    <string name="menu_Zeberio">Zeberio</string>
    <string name="menu_Ondarrua">Ondarrua</string>
    <string name="menu_Zamudio">Zamudio</string>
    <string name="menu_test">Neurtu zure ezaguera</string>

    <!--Activity selActividadHerria,-->
    <string name="herri_title">Zer egin nahi duzu?</string>
    <string name="herri_selArik">Nolakoa da bertako hizkera?</string>
    <!--Activity selAriketaHerria,-->
    <string name="selArik_title">Ariketak</string>
    <string name="selArik_entzun">ENTZUN eta IDATZI ezazu</string>
    <string name="selArik_Img">Badakizu zerekin doan?</string>
    <string name="selArik_Record">Zuk nola ezango zenuke?</string>

    <!--SelKultura activity-->
    <string name="selKultur_title">Zer ikasi nahi duzu?</string>
    <string name="selKultur_kultur">Kultura</string>
    <string name="selKultur_gastronomia">Gastronomia</string>
    <string name="selKultur_jaiak">Jaiak</string>
    <string name="selKultur_bitxi">Bitxikeriak</string>
    <string name="title_activity_kultur">KulturActivity</string>

    <!--RecordActivity Layout-->
    <string name="Record_title">Zuk nola ezango zenuke?</string>
    <string name="Record_ark_mota">Ariketa Mota:</string>
    <string name="Record_ark_code">Ariketa Code</string>

    <!--ImgActivity Layout-->
    <string name="Img_title">Zuk nola ezango zenuke?</string>
    <string name="Img_ark_mota">Ariketa Mota:</string>
    <string name="Img_ark_code">Ariketa Code</string>
    <!--ImgActivity Layout-->
    <string name="Audio_title">Entzun eta Idatzi</string>
    <string name="audio_ark_mota">Ariketa Mota:</string>
    <string name="audio_ark_code">Ariketa Code</string>


</resources>
