<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondopres"
    tools:context=".View.MenuActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="#e26420"
        android:text="@string/menu_title" />
    <Button
        android:id="@+id/menu_Bermeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_bermeo"
        android:onClick="selherri"/>
    <Button
        android:id="@+id/menu_Gernika"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_gernika"
        android:onClick="selherri"/>
    <Button
        android:id="@+id/menu_Lekeitio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_Lekeitio"
        android:onClick="selherri"/>
    <Button
        android:id="@+id/menu_Zeberio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_Zeberio"
        android:onClick="selherri"/>
    <Button
        android:id="@+id/menu_Ondarrua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_Ondarrua"
        android:onClick="selherri"/>
    <Button
        android:id="@+id/menu_Zamudio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_Zamudio"
        android:onClick="selherri"/>
    <Button
        android:id="@+id/menu_Test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/menu_test"
        android:onClick="test"/>

</LinearLayout>
