<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:id="@+id/SelKulturLayout"
    android:background="@drawable/imgkultura"
    tools:context="herririk_herri.tta.intel.ehu.eus.herririk_herri.SelKulturaActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="#e26420"
        android:text="@string/menu_title" />
    <Button
        android:id="@+id/selKultur_Kultura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selKultur_kultur"
        android:onClick="selkultura"/>
    <Button
        android:id="@+id/selKultur_Gastronomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selKultur_gastronomia"
        android:onClick="selkultura"/>
    <Button
        android:id="@+id/selKultur_Jaiak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selKultur_jaiak"
        android:onClick="selkultura"/>
    <Button
        android:id="@+id/selKultur_Bitxiker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selKultur_bitxi"
        android:onClick="selkultura"/>


</LinearLayout>
