<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondokultugas"
    android:id="@+id/kulturLayout"
    tools:context=".View.KulturActivity">


    <Button
        android:id="@+id/kultur_button_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_inicio"
        android:onClick="load"/>
    <ImageView
        android:id="@+id/kultur_img"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:adjustViewBounds="true"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/kultur_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18dp"
        android:visibility="invisible"
        android:text="@string/app_name" />
    <GridLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:columnCount="2"
        android:rowCount="1">

    <Button
        android:id="@+id/kultur_button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="invisible"
        android:text="@string/button_back"
        android:onClick="back"/>
    <Button
        android:id="@+id/kultur_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:visibility="invisible"
        android:text="@string/button_next"
        android:onClick="next"/>
    </GridLayout>

</LinearLayout>
    </ScrollView>
