<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondojueg"
    android:id="@+id/audio_layout"
    tools:context="herririk_herri.tta.intel.ehu.eus.herririk_herri.AudioActivity">

    <Button
        android:id="@+id/audio_button_init"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_inicio"
        android:onClick="load"/>
    <TextView
        android:id="@+id/audio_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="prueba enunciado test"/>

    <TextView
        android:id="@+id/audio_enunciado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20dp"
        android:text="prueba enunciado test"/>
    <Button
        android:id="@+id/audio_button_play"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_play"
        android:onClick="play"/>
    <RadioGroup
        android:id="@+id/audio_choices"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Se poblara programaticamente-->
    </RadioGroup>

    <Button
        android:id="@+id/audio_button_correct"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_correct"
        android:onClick="zuzendu"/>
    <Button
        android:id="@+id/audio_button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:visibility="invisible"
        android:onClick="next"/>


</LinearLayout>
