<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".View.MainActivity"
    android:background="@drawable/fondopres">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="#e26420"
        android:text="@string/app_name" />
     <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon_prueba"
         android:adjustViewBounds="true"
         android:layout_gravity="center_horizontal" />
    <GridLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:columnCount="2"
        android:rowCount="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/abc_btn_colored_text_material"
            android:text="@string/login_username" />
        <EditText
            android:id="@+id/login_username"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:inputType="text"
            android:maxLines="1"
            android:background="#ffffff"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/abc_btn_colored_text_material"
            android:text="@string/login_pass" />
        <EditText
            android:id="@+id/login_password"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass"
            android:inputType="text"
            android:maxLines="1"
            android:background="#ffffff"
            android:singleLine="true"/>

</GridLayout>
    <GridLayout
        android:id="@+id/register_layout"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:columnCount="2"
        android:visibility="gone"
        android:rowCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/abc_btn_colored_text_material"
            android:text="@string/login_username" />
        <EditText
            android:id="@+id/register_username"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_username"
            android:inputType="text"
            android:maxLines="1"
            android:background="#ffffff"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/abc_btn_colored_text_material"
            android:text="@string/login_pass" />
        <EditText
            android:id="@+id/register_password"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass"
            android:inputType="text"
            android:maxLines="1"
            android:background="#ffffff"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/abc_btn_colored_text_material"
            android:text="@string/login_pass_conf" />
        <EditText
            android:id="@+id/register_password_conf"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/login_pass"
            android:inputType="text"
            android:maxLines="1"
            android:background="#ffffff"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/abc_btn_colored_text_material"
            android:text="@string/register_name" />
        <EditText
            android:id="@+id/register_name"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_name"
            android:inputType="text"
            android:maxLines="1"
            android:background="#ffffff"
            android:singleLine="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="15dp"
            android:textColor="@color/abc_btn_colored_text_material"
            android:text="@string/register_lastname" />
        <EditText
            android:id="@+id/register_lastname"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/register_lastname"
            android:inputType="text"
            android:maxLines="1"
            android:background="#ffffff"
            android:singleLine="true"/>

    </GridLayout>
    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:onClick="login"/>
    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="changeview"/>
    <Button
        android:id="@+id/button_register_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/register"
        android:onClick="register"/>

</LinearLayout>
